# user-info-service

./: Dockerfile  Pipfile  README.md  depopulate_database  docker-compose.yml  populate_database  pyproject.toml  run_alembic  run_tests  run_tests_ci
.github/workflows/: build.yml
app/: crud.py  jwt.py  main.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 97f4c36233f0_initial_migration.py  f4859c20c35c_add_user_locale.py
seed/: depopulate.sql  seed.sql
tests/: test_base.py  test_main.py
